removed profile image

--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -29,6 +29,7 @@ body {
 #topBar {
 	height: 50px;
 	display: flex;
+    padding: 0;
 	/*justify-content: center;*/
 	background: linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
 	font-family: Verdana, sans-serif;
