--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -13,7 +13,6 @@
 [class*="col-"] {
 	float: left;
 	padding: 15px;
-	/*border: 1px solid red;*/
 }
 
 /* types */
@@ -22,9 +21,41 @@ body {
 	background: black;
 }
 
+li {
+    display: inline;
+    margin-top: 0;
+    margin-left: 10px;
+    padding-top: 0;
+    padding-right: 10px;
+    border-right: 1px solid gray;
+    color: black;
+}
+
+li:hover {
+    color: white;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: white;
+}
+
 /* classes */
 
+.slideIn {
+    /*width: 285px;*/
+    top: -300px;
+    left: 40px;
+    position: fixed;
+}
 
+.close {
+    color: gray;
+}
 
 /* ids */
 
@@ -37,11 +68,16 @@ body {
 }
 
 #menu {
-	height: 70%;
+	height: 80%;
+    width: auto;
 	align-self: center;
 	/*vertical-align: middle;*/
 	/*height: 18px;*/
 	cursor: pointer;
+}
+
+#navigation {
+    display: none;
 }
 
 /* For mobile phones: */
@@ -79,4 +115,10 @@ body {
     .col-10 {width: 83.33%;}
     .col-11 {width: 91.66%;}
     .col-12 {width: 100%;}
+}
+
+@media only screen and (orientation: landscape) {
+    body {
+        background-color: lightblue;
+    }
 }
