--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -52,6 +52,7 @@ a:hover {
 	height: 50px;
 	display: flex;
 	/*justify-content: center;*/
+    border-bottom: 1px solid black;
 	background: linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
 	font-family: Verdana, sans-serif;
 }
