--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -3,6 +3,9 @@
     /* color */
     --backgroundColor: black;
     --evilDarkGray: #666;       /* dark gray */
+    --darkGray: #333;           /* dark dark gray */
+    --borderColor: white;
+    --textShadowColor: #909090;
 
     /* video dimensions */
     --videoWidth: 100%;
@@ -11,7 +14,11 @@
 
     /* border parameters */
     --borderThickness: 2px;
-    --borderColor: white;
+
+    --profileImageSize: 200px;
+
+    --textShadowDisplacement: 6px;
+
 }
 
 * {
@@ -91,6 +98,24 @@ a:hover {
 
 #home, #media {
     border-right: 1px solid gray;
+}
+
+#profile {
+    width: var(--profileImageSize);
+    height: var(--profileImageSize);
+    display: block;
+    margin: auto;
+    border-radius: 200%;
+}
+
+#aboutInfo {
+    color: white;
+    width: 33%;
+    /*border: 1px solid red;*/
+    text-align: center;
+    text-shadow: 0 var(--textShadowDisplacement) var(--textShadowDisplacement) var(--evilDarkGray);
+    display: block;
+    margin: auto;
 }
 
 /* For mobile phones: */
