--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -106,6 +106,7 @@ a:hover {
     display: block;
     margin: auto;
     border-radius: 200%;
+    box-shadow: 0px 10px 8px var(--darkGray);
 }
 
 #aboutInfo {
