--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -36,6 +36,7 @@
 
 body {
 	background: var(--backgroundColor);
+    background-color: var(--backgroundColor);
     /*background: white;*/
     /*background: linear-gradient(#ffffff, #d4d4d4);*/
 }
