--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -9,7 +9,7 @@ iframe {
 .videoDiv {
     width: 100%;
     height: 0;
-    display: block;
+    overflow: show;
     /*min-height: 100px;*/
     padding-top: 0;
     padding-bottom: 56.25%; /* preserves the 16/9 aspect ratio */
