--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -1,7 +1,6 @@
 iframe {
     width: 100%;
-    /*height: 100%;*/
-    height: auto;
+    height: 100%;
     margin: auto;
     /*max-width: 1280px;*/
     /*max-height: 720px;*/
