--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -38,7 +38,7 @@
 
 body {
 	background: var(--backgroundColor);
-    background-color: var(--backgroundColor);
+    background-color: black;
     /*background: white;*/
     /*background: linear-gradient(#ffffff, #d4d4d4);*/
 }
