--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -77,7 +77,7 @@ a:hover {
 	/*justify-content: center;*/
     /*border-bottom: 1px solid black;*/
     border-bottom: 1px solid white;
-    margin-bottom: 40px;
+    /*margin-bottom: 40px;*/
 	background: linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
 	font-family: Verdana, sans-serif;
 }
@@ -100,6 +100,10 @@ a:hover {
 
 #home, #media {
     border-right: 1px solid gray;
+}
+
+#mainContent {
+    margin-top: 40px;
 }
 
 #container {
