--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -4,6 +4,11 @@ iframe {
     margin: auto;
 }
 
+#videoToggle, #photoToggle {
+    color: white;
+    text-align: center;
+}
+
 .videoDiv {
     width: 100%;
     height: 0;
