fixed media toggles

--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -4,7 +4,7 @@ iframe {
     margin: auto;
 }
 
-#videoToggle, #photoToggle {
+#mediaToggle, #videoToggle, #photoToggle {
     color: white;
     text-align: center;
 }
