--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -7,13 +7,11 @@
     --borderColor: white;
     --textShadowColor: #909090;
 
-    /* border parameters */
+    /* dimensions */
     --borderThickness: 2px;
-
     --profileImageSize: 200px;
-
     --textShadowDisplacement: 6px;
-
+    --heightWidthRatio: 56.25%;
 }
 
 * {
@@ -23,6 +21,10 @@
 	box-sizing: border-box;
 }
 
+.row {
+    max-width: 1000px;
+    margin: auto;
+}
 .row::after {
 	content: "";
 	clear: both;
@@ -30,6 +32,8 @@
 }
 
 [class*="col-"] {
+    width: 100%;
+    /*max-width: 700px;*/
 	float: left;
 	padding: 15px;
 }
@@ -45,13 +49,10 @@ body {
 
 li {
     display: inline;
-    margin-top: 0;
-    margin-left: 10px;
-    padding-top: 0;
-    padding-right: 10px;
-    /*border-right: 1px solid gray;*/
-    cursor: pointer;
     color: black;
+    margin: 0 0 0 10px;     /* top, right, bottom, left */
+    padding: 0 10px 0 0;    /* top, right, bottom, left */
+    cursor: pointer;
 }
 li:hover {
     color: white;
@@ -67,19 +68,23 @@ a:hover {
 
 /* classes */
 
-.quarter {
-    width: 25%;
-    background: var(--darkGray);
+.default {
+    float: left;
+    padding: 15px;
+    border: 1px solid red;
 }
 
-.third {
-    width: 33%;
-    background: var(--darkGray);
-}
+.quarter {width: 25%;}
+.third {width: 33%;}
+.half {width: 50%;}
 
-.half {
-    width: 50%;
-    background: var(--darkGray);
+.navBar {
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
+    border-bottom: 1px solid white;
+    z-index: -1;
 }
 
 /* ids */
@@ -87,10 +92,8 @@ a:hover {
 #topBar {
 	height: 50px;
 	display: flex;
-	/*justify-content: center;*/
     /*border-bottom: 1px solid black;*/
     border-bottom: 1px solid white;
-    /*margin-bottom: 40px;*/
 	background: linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
 	font-family: Verdana, sans-serif;
 }
@@ -99,8 +102,6 @@ a:hover {
 	height: 80%;
     width: auto;
 	align-self: center;
-	/*vertical-align: middle;*/
-	/*height: 18px;*/
 	cursor: pointer;
 }
 
@@ -135,7 +136,6 @@ a:hover {
 
 #aboutInfo {
     color: white;
-    /*width: 33%;*/
     text-align: center;
     text-shadow: 0 var(--textShadowDisplacement) var(--textShadowDisplacement) var(--evilDarkGray);
     display: block;
@@ -143,10 +143,9 @@ a:hover {
 }
 
 /* For mobile phones: */
-[class*="col-"] {
+/*[class*="col-"] {
     width: 100%;
-    /*border: 1px solid green;*/
-}
+}*/
 
 @media only screen and (min-width: 600px) {
     /* For tablets: */
