--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -78,7 +78,7 @@ a:hover {
 .third {width: 33%;}
 .half {width: 50%;}
 
-.navBar {
+.topBanner {
     position: absolute;
     width: 100%;
     height: 50px;
