--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -15,6 +15,7 @@ iframe {
     /*min-height: 100px;*/
     padding-top: 0;
     padding-bottom: var(--heightWidthRatio); /* preserves the 16/9 aspect ratio */
+    /*position: absolute;*/
     /*margin: 15px 0;*/
     /*border: 1px solid red;*/
 }
@@ -23,6 +24,7 @@ iframe {
     border: var(--borderThickness) solid var(--borderColor);
     display: block;
     margin: auto;
+    position: relative;
 }
 
 .photoRow {
