--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -14,12 +14,16 @@ iframe {
     height: 0;
     padding-top: 0;
     padding-bottom: var(--heightWidthRatio); /* preserves the 16/9 aspect ratio */
+    position: relative;
     /*position: absolute;*/
     /*margin: 15px 0;*/
     /*border: 1px solid red;*/
 }
 
 .video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     border: var(--borderThickness) solid var(--borderColor);
     display: block;
     margin: auto;
