--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -11,24 +11,17 @@ iframe {
 
 .videoDiv {
     width: 100%;
-    /*height: 56.25vw;*/
-    height: 0;
+    /*height: 0;*/
     padding-top: 0;
-    padding-bottom: var(--heightWidthRatio); /* preserves the 16/9 aspect ratio */
-    position: relative;
-    /*position: absolute;*/
+    /*padding-bottom: var(--heightWidthRatio); /* preserves the 16/9 aspect ratio */
     /*margin: 15px 0;*/
     /*border: 1px solid red;*/
 }
 
 .video {
-    position: absolute;
-    width: 100%;
-    height: 100%;
     border: var(--borderThickness) solid var(--borderColor);
-    display: block;
+    /*display: block;*/
     margin: auto;
-    position: relative;
 }
 
 .photoRow {
