--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -19,7 +19,7 @@ iframe {
 }
 
 .video {
-    border: var(--borderThickness) solid var(--borderColor);
+    /*border: var(--borderThickness) solid var(--borderColor);*/
     /*display: block;*/
     margin: auto;
 }
@@ -27,17 +27,41 @@ iframe {
 .photoRow {
     width: 100%;
     padding: 0;
+    /*border: 1px solid green;*/
+    display: flex;
+    align-items: center;
 }
 
 .photo {
-    border: var(--borderThickness) solid var(--borderColor);
+    /*border: var(--borderThickness) solid var(--borderColor);*/
     background-color: white;
     cursor: pointer;
     max-width: 100%;
     width: 100%;
     height: auto;
+    /*vertical-align: middle;*/
+    /*margin-top: auto;*/
+    /*margin-bottom: auto;*/
     /*box-shadow: 0px 10px 8px var(--darkGray);*/
 }
 .photo:hover {
     opacity: 0.8;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.9);
+}
+
+.modalContent {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
 }
