--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -129,6 +129,7 @@ a:hover {
     width: var(--profileImageSize);
     height: var(--profileImageSize);
     background: linear-gradient(#ffffff, #000000);
+    border: var(--borderThickness) solid var(--borderColor);
     display: block;
     margin: auto;
     border-radius: 200%;
