--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -9,6 +9,13 @@ iframe {
     margin: auto;
 }
 
+.videoRow {
+			width: 100%;
+			padding: 0;
+			display: flex;
+			align-items: center;
+}
+
 .videoDiv {
     width: 100%;
     /*height: 0;*/
