--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -48,7 +48,7 @@ iframe {
     width: 100%;
     padding: 0;
     /*border: 1px solid green;*/
-    display: flex;
+    /*display: flex;*/
     align-items: center;
 }
 
