--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -16,9 +16,9 @@
 
 * {
     margin: 0;
+    box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
-	box-sizing: border-box;
     /*font-family: Verdana, sans-serif;*/
 }
 
@@ -42,10 +42,15 @@
 /* types */
 
 body {
-	background: var(--backgroundColor);
+	/*background: var(--backgroundColor);*/
     background-color: black;
-    /*background: white;*/
-    /*background: linear-gradient(#ffffff, #d4d4d4);*/
+    /*background: url("../images/background.jpg");*/
+    background-size: cover;
+    background-position: center;
+}
+
+h1 {
+    color: white;
 }
 
 li {
@@ -69,12 +74,6 @@ a:hover {
 
 /* classes */
 
-.default {
-    float: left;
-    padding: 15px;
-    border: 1px solid red;
-}
-
 .quarter {width: 25%;}
 .third {width: 33%;}
 .half {width: 50%;}
@@ -84,6 +83,8 @@ a:hover {
     width: 100%;
     height: 50px;
     background: linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
+    background: -webkit-linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
+    background: -moz-linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
     border-bottom: 1px solid white;
     z-index: -1;
 }
@@ -96,6 +97,8 @@ a:hover {
     /*border-bottom: 1px solid black;*/
     border-bottom: 1px solid white;
 	background: linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
+    background: -webkit-linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
+    background: -moz-linear-gradient(to right, #bbbbbb, #bbbbbb, #bbbbbb, #efefef, #efefef, #efefef);
 	/*font-family: Verdana, sans-serif;*/
 }
 
@@ -113,7 +116,7 @@ a:hover {
     display: none;
 }
 
-#home, #media {
+#home, #media, #projects {
     border-right: 1px solid gray;
 }
 
@@ -130,6 +133,8 @@ a:hover {
     width: var(--profileImageSize);
     height: var(--profileImageSize);
     background: linear-gradient(#ffffff, #000000);
+    background: -webkit-linear-gradient(#ffffff, #000000);
+    background: -moz-linear-gradient(#ffffff, #000000);
     border: var(--borderThickness) solid var(--borderColor);
     display: block;
     margin: auto;
