--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -81,6 +81,10 @@ iframe {
     background-color: black;
 }
 
+.viewer-m {
+    padding-top: 20px;
+}
+
 .photoSlide {
     display: none;
     position: relative;
