--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -20,6 +20,10 @@
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     /*font-family: Verdana, sans-serif;*/
+    user-select: none;
+    -webkit-user-select: none;  /* Chrome/Safari */        
+    -moz-user-select: none;     /* Firefox */
+    -ms-user-select: none;      /* IE10+ */
 }
 
 .row {
