--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -6,6 +6,7 @@
 }
 
 .buttonRow {
+    font-family: 'Barrio', cursive;
 	width: 100%;
 	padding: 0;
 	display: flex;
@@ -50,22 +51,6 @@ iframe {
     /*border: 1px solid green;*/
     /*display: flex;*/
     align-items: center;
-}
-
-.photo {
-    /*border: var(--borderThickness) solid var(--borderColor);*/
-    /*background-color: white;*/
-    cursor: pointer;
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-    /*vertical-align: middle;*/
-    /*margin-top: auto;*/
-    /*margin-bottom: auto;*/
-    /*box-shadow: 0px 10px 8px var(--darkGray);*/
-}
-.photo:hover {
-    opacity: 0.8;
 }
 
 .viewer {
@@ -134,10 +119,18 @@ button {
     left: 0;
     width: 20%;
     height: 100%;
-    opacity: 0;
+    text-align: left;
+    padding-left: 30px;
+    background: rgba(0, 0, 0, 0);
+    text-shadow: 0px 2px 2px var(--darkGray);
+    /*opacity: 0;*/
 }
-.previous:hover {
-    opacity: .5;
+.previous:active {
+    background: rgba(0, 0, 0, .5);
+    background: linear-gradient(left, rgba(0, 0, 0, .5), rgba(0, 0, 0, 0));
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, .5), rgba(0, 0, 0, 0));
+    background: -moz-linear-gradient(left, rgba(0, 0, 0, .5), rgba(0, 0, 0, 0));
+    /*opacity: .5;*/
 }
 
 .next {
@@ -145,10 +138,18 @@ button {
     right: 0;
     width: 20%;
     height: 100%;
-    opacity: 0;
+    text-align: right;
+    padding-right: 30px;
+    background: rgba(0, 0, 0, 0);
+    text-shadow: 0px 2px 2px var(--darkGray);
+    /*opacity: 0;*/
 }
-.next:hover {
-    opacity: .5;
+.next:active {
+    /*opacity: .5;*/
+    background: rgba(0, 0, 0, .5);
+    background: linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+    background: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
 }
 
 .photoSlide {
