--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -126,7 +126,7 @@ button {
     /*opacity: 0;*/
 }
 .previous:active {
-    background: rgba(0, 0, 0, .5);
+    /*background: rgba(0, 0, 0, .5);*/
     background: linear-gradient(left, rgba(0, 0, 0, .5), rgba(0, 0, 0, 0));
     background: -webkit-linear-gradient(left, rgba(0, 0, 0, .5), rgba(0, 0, 0, 0));
     background: -moz-linear-gradient(left, rgba(0, 0, 0, .5), rgba(0, 0, 0, 0));
@@ -146,7 +146,7 @@ button {
 }
 .next:active {
     /*opacity: .5;*/
-    background: rgba(0, 0, 0, .5);
+    /*background: rgba(0, 0, 0, .5);*/
     background: linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
     background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
     background: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
