added scrolling for keyboard on smaller screens

--- a/css/projectStyle.css
+++ b/css/projectStyle.css
@@ -50,7 +50,7 @@
 /*********************************************/
 
 .showcase {
-    overflow: hidden;
+    overflow: scroll;
     user-select: none;
     -webkit-user-select: none;  /* Chrome/Safari */        
     -moz-user-select: none;     /* Firefox */
