--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -67,11 +67,11 @@ li:hover {
     color: white;
 }
 
-li a {
+a {
     text-decoration: none;
     color: black;
 }
-li a:hover {
+a:hover {
     color: white;
 }
 
