--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -1,3 +1,8 @@
+body {
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+}
+
 #mediaToggle, #videoToggle, #photoToggle {
     color: white;
     /*border: 1px solid var(--borderColor);*/
