added photos & changed highlight color on keyboard

--- a/css/projectStyle.css
+++ b/css/projectStyle.css
@@ -7,8 +7,8 @@
     --naturalKeyColor: white;
     --blackKeyColor: black;
     --borderColor: black;
-    --highlightColor: #b22;     /* blue */
-    --selectColor: #68b;        /* red */
+    --highlightColor: #6af;     /* blue #68b */
+    --selectColor: #b22;        /* red */
     --keyboardKeyColor: #f84;   /* orange */
     --evilDarkGray: #666;       /* dark gray */
 
