--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -3,7 +3,7 @@ body {
     -webkit-transition: all 0.5s ease-in-out;
 }
 
-#mediaToggle, #videoToggle, #photoToggle {
+#mediaToggle, #videoToggle, #photoToggle, #audioToggle {
     color: white;
     /*border: 1px solid var(--borderColor);*/
     cursor: pointer;
@@ -56,6 +56,19 @@ iframe {
     /*border: 1px solid green;*/
     /*display: flex;*/
     align-items: center;
+}
+
+.audioRow {
+    width: 100%;
+    padding: 0;
+    align-items: center;
+}
+
+.track {
+    cursor: pointer;
+    max-width: 100%;
+    width: 100%;
+    height: auto;
 }
 
 .viewer {
@@ -171,21 +184,3 @@ button {
 .photoSlide .photo:hover {
     opacity: 1;
 }
-
-/*.modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.9);
-}
-
-.modalContent {
-    margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
-}*/
