--- a/css/mediaStyle.css
+++ b/css/mediaStyle.css
@@ -54,7 +54,7 @@ iframe {
     width: 100%;
     padding: 0;
     /*border: 1px solid green;*/
-    /*display: flex;*/
+    display: flex;
     align-items: center;
 }
 
@@ -183,4 +183,10 @@ button {
 
 .photoSlide .photo:hover {
     opacity: 1;
+}
+
+@media only screen and (max-width: 600px) {
+    .photoRow {
+        display: block;
+    }
 }
